fix: button center text alignment

--- a/src/ui/button.css
+++ b/src/ui/button.css
@@ -8,6 +8,7 @@
 
   height: 36px;
   text-transform: uppercase;
+  text-align: center;
   user-select: none;
   white-space: nowrap;
   touch-action: manipulation;
